Too many fixes, sorry, no hay plata